--- a/frontend/src/components/playlists/playlist-show.scss
+++ b/frontend/src/components/playlists/playlist-show.scss
@@ -2,6 +2,10 @@
   font-size: 30px;
   color: #FDB8FF;
   background-image: linear-gradient(black, #863CD6);
+  height: 100vh;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
 };
 
 .playlist-button-outer {
